sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:13: error: Unmatched closing brace '}' ignored here
      }
      ^GatesPancake:22: error: expected class or object definition
def estLibre(rang:Int): Boolean={
^GatesPancake:32: error: expected class or object definition
def trouverTPlus1(t:Int):Int={
^GatesPancake:40: error: expected class or object definition
def trouverTMoins1(t:Int):Int={
^GatesPancake:48: error: expected class or object definition
def estPremier(rang:Int):Boolean={
^GatesPancake:56: error: expected class or object definition
def casA(t:Int,tplus1:Int,tmoins1:Int):Boolean={
^GatesPancake:68: error: expected class or object definition
def casB(t:Int,tplus1:Int,tmoins1:Int):Boolean={
^GatesPancake:82: error: expected class or object definition
def casC():Boolean={
^GatesPancake:87: error: expected class or object definition
def casD():Boolean={
^GatesPancake:91: error: expected class or object definition
def casE():Boolean={
^GatesPancake:96: error: expected class or object definition
def casF():Boolean={
^GatesPancake:100: error: expected class or object definition
def casG():Boolean={
^GatesPancake:104: error: expected class or object definition
def casH():Boolean={
^GatesPancake:108: error: expected class or object definition
def casI():Boolean={
^GatesPancake:115: error: Unmatched closing brace '}' ignored here
}
^